--- a/man/es/dpkg-checkbuilddeps.1
+++ b/man/es/dpkg-checkbuilddeps.1
@@ -1,26 +1,26 @@
 .\" (c) 2003 Software in the Public Interest
-.\" Esta traduccin ha sido realizada por Rubn Porras Campo <nahoo@inicia.es>
-.\" Est basada en la pgina de manual original:
-.\" versin 1.2 del CVS de
+.\" Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
+.\" Está basada en la página de manual original:
+.\" versión 1.2 del CVS de
 .\" /cvs/debian-doc/manpages/english/dpkg/dpkg-checkbuilddeps.1
 
 .TH DPKG-CHECKBUILDDEPS 1 "febrero de 2001" "proyecto Debian" "utilidades dpkg"
 .SH NOMBRE
-dpkg-checkbuilddeps -- comprueba las dependencias y conflictos de compilacin.
+dpkg-checkbuilddeps -- comprueba las dependencias y conflictos de compilación.
 .SH SINOPSIS
 \fBdpkg-checkbuilddeps\fR -B [\fIfichero-control\fR]
-.SH DESCRIPCIN
+.SH DESCRIPCIÓN
 Este programa comprueba que los paquetes instalados en el sistema
-satisfacen las dependencias y conflictos de construccin especificados
+satisfacen las dependencias y conflictos de construcción especificados
 en el fichero de control del paquete. Si alguna de estas condiciones no se
-cumple avisa y termina devolviendo un cdigo de error distinto de cero.
+cumple avisa y termina devolviendo un código de error distinto de cero.
 .P
-Por omisin se lee \fBdebian/control\fR, pero puede especificarse un
-fichero de control alternativo en la lnea de rdenes.
+Por omisión se lee \fBdebian/control\fR, pero puede especificarse un
+fichero de control alternativo en la línea de órdenes.
 .SH OPCIONES
 .TP
 .I -B
-Ignora las lneas Build-Depends-Indep. Usar cuando se construyen
+Ignora las líneas Build-Depends-Indep. Usar cuando se construyen
 paquetes independientes de la arquitectura.
 .SH AUTOR
 Copyright 2001 Joey Hess
@@ -28,7 +28,7 @@ Copyright 2001 Joey Hess
 <joeyh@debian.org>
 .UE
 .sp
-Esto es software libre, lea la Licencia Pblica General de GNU versin
-2 o posterior para las condiciones de copia. NO hay ninguna garanta.
+Esto es software libre, lea la Licencia Pública General de GNU versión
+2 o posterior para las condiciones de copia. NO hay ninguna garantía.
 .SH TRADUCTOR
-Traduccin de Rubn Porras Campo <debian-l10n-spanish@lists.debian.org>
+Traducción de Rubén Porras Campo <debian-l10n-spanish@lists.debian.org>
